[gd_scene load_steps=8 format=3 uid="uid://qmu1xbe763ch"]

[ext_resource type="Script" path="res://Scripts/oven.gd" id="1_u0g25"]
[ext_resource type="Texture2D" uid="uid://ttaikodg18bf" path="res://Assets/Furniture/OvenV2_Off.png" id="2_2d8ju"]
[ext_resource type="Texture2D" uid="uid://pr86bnnenkbt" path="res://Assets/Furniture/OvenV2_Warm.png" id="3_mhlow"]
[ext_resource type="PackedScene" uid="uid://r6roukmgyihm" path="res://Assets/Scenes/Kill_collision.tscn" id="3_u32fw"]
[ext_resource type="Texture2D" uid="uid://du8i1taedpc8w" path="res://Assets/Furniture/OvenV2_Hot.png" id="5_hfoua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bdc5"]
size = Vector2(96, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l881f"]
size = Vector2(29, 5.625)

[node name="Oven" type="Node2D"]
position = Vector2(312, 176)
script = ExtResource("1_u0g25")

[node name="OvenOffSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_2d8ju")

[node name="StaticBody2D" type="StaticBody2D" parent="OvenOffSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenOffSprite/StaticBody2D"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_5bdc5")

[node name="OvenWarnSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_mhlow")

[node name="KillCollision" parent="OvenWarnSprite" instance=ExtResource("3_u32fw")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenWarnSprite/KillCollision"]
visible = false
position = Vector2(22, -29)
shape = SubResource("RectangleShape2D_l881f")

[node name="StaticBody2D" type="StaticBody2D" parent="OvenWarnSprite"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenWarnSprite/StaticBody2D"]
visible = false
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_5bdc5")

[node name="OvenHotSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("5_hfoua")

[node name="KillCollision" parent="OvenHotSprite" instance=ExtResource("3_u32fw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenHotSprite/KillCollision"]
position = Vector2(21.5, -29)
shape = SubResource("RectangleShape2D_l881f")

[node name="StaticBody2D" type="StaticBody2D" parent="OvenHotSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenHotSprite/StaticBody2D"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_5bdc5")

[node name="OvenTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="OvenTimer" to="." method="_on_oven_timer_timeout"]
